# Skillbox

module 17/task1/: task1.cpp
module11/task1/: task1.cpp
module11/task2/: task2.cpp
module11/task3/: task3.cpp
module11/task4/: task4.cpp
module11/task5/: task5.cpp
module12/task1/: task1.cpp
module12/task2/: task2.cpp
module12/task3/: task3.cpp
module13/task1/: task1.cpp
module13/task2/: task2.cpp
module13/task3/: task3.cpp
module14/seaBattle/: input.txt  seaBattle.cpp
module14/task1/: task1.cpp
module14/task2/: task2.cpp
module14/task3/: task3.cpp
module14/task4/: task4.cpp
module14/task5/: task5.cpp
module14/task6/: task6.cpp
module14/task7/: task7.cpp
module14/task8/: task8.cpp
module15/task1/: task1.cpp
module15/task2/: task2.cpp
module15/task3/: task3.cpp
module15/task4/: task4.cpp
module16/task1/: task1.cpp
module16/task2/: task2.cpp
module16/task3/: task3.cpp
module16/task4/: task4.cpp
module16/task5/: task5.cpp
module17/task2/: task2.cpp
module17/task3/: task3.cpp
module18/task1/: task1.cpp
module18/task2/: task2.cpp
module18/task3/: task3.cpp
module18/task4/: task4.cpp
module19/task1/: task1.cpp  words.txt
module19/task2/: task2.cpp  test.txt
module19/task3/: task3.cpp
module19/task4/: task4.cpp  yes.pn
module19/task5/: task5.cpp
module20/task1/: file.txt  task1.cpp
module20/task2/: task2.cpp
module20/task3/: task3.cpp
module20/task4/: task4.cpp
module21/task1/: paylist.txt  task1.cpp
module21/task2/: input_fast.txt  task2.cpp
module21/task3/: task3.cpp
module21/task4/: task4.cpp
module22/task1/: task1.cpp
module25/task2/: CMakeLists.txt
module25/task2/include/: header.h
module25/task2/src/: CMakeLists.txt  cpu.cpp  disk.cpp  gpu.cpp  header.h  main.cpp  ram.cpp
module25/task2/src/cpu/: cpu.h
module25/task2/src/disk/: disk.cpp  disk.h
module25/task2/src/gpu/: CMakeLists.txt  gpu.h
module25/task2/src/kbd/: CMakeLists.txt  kbd.cpp  kbd.h
module25/task2/src/ram/: CMakeLists.txt  ram.h
module30/task1/: CMakeLists.txt  task1.cpp
module30/task2/: CMakeLists.txt  task2.cpp
module30/task3/: CMakeLists.txt  task3.cpp
(+54 files in other folders)
